hphp/hack/test/typecheck/construct/missing_init.php.exp
File "missing_init.php", line 7, characters 19-29:
Class C does not initialize all of its members; x y are not always initialized.
Make sure you systematically set $this->x $this->y when the method __construct is called.
Alternatively, you can define the members as nullable (?...)
 (NastCheck[3015])
